--- a/laporan.html
+++ b/laporan.html
@@ -183,7 +183,7 @@
         <div class="main-header">
             <div style="font-size: 20px; padding-bottom: 8px; font-weight: bold;">RT 01 / RW 30 - KPA REGENCY</div>
             <div class="header-icons"> 
-                <a href="login.html" class="logout-btn" style="text-decoration: none; color: white;"><i class="fas fa-sign-out-alt"></i> logout</a>
+                <a href="index.html" class="logout-btn" style="text-decoration: none; color: white;"><i class="fas fa-sign-out-alt"></i> logout</a>
             </div>
         </div>
     </div>  
