--- a/laporan.html
+++ b/laporan.html
@@ -347,27 +347,21 @@
     <div style="display: flex; justify-content: space-between; margin-top: 20px;">
     <div style="text-align: center; margin-left: 5%;">
         <p style="font-size: 0.9em;">Bendahara</p>
-        <p style="font-weight: bold; font-size: 0.9em;">Tri Afandi</p>
-        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0819 0438 8602</p>
+        <p style="font-weight: bold; font-size: 0.9em;">Joko Suwito</p>
+        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0851 0029 9091</p>
     </div>
     <div style="text-align: center; margin-left: 5%;">
-        <p style="font-size: 0.9em;">Sarpras</p>
-        <p style="font-weight: bold; font-size: 0.9em;">Sukardi</p>
-        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0856 4166 3644</p>
+        <p style="font-size: 0.9em;">Sekretaris</p>
+        <p style="font-weight: bold; font-size: 0.9em;">Martin</p>
+        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0811 2901 196</p>
     </div>
-    <div style="text-align: center; margin-right: 5%;">
-        <p style="font-size: 0.9em;">Sosial</p>
-        <p style="font-weight: bold; font-size: 0.9em;">Budi Haryanto</p>
-        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0882 1543 1058</p>
-    </div>
-    
 </div>
 <hr>
 <div style="display: flex; justify-content: center; margin-top: 20px;">
     <div style="text-align: center;">
         <p style="font-size: 0.9em;">Mengetahui, <br> Ketua RT</p>
-        <p style="font-weight: bold; font-size: 0.9em;">Sunu Aji Pramuji</p>
-        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 087876868828</p>
+        <p style="font-weight: bold; font-size: 0.9em;">Arief</p>
+        <p style="margin-top: -10px; font-size: 10px;"><i class="fab fa-whatsapp"></i> 0821 3746 6886</p>
     </div>
 </div>
 
